core/core-common/src/tests/models/snapshots/proton_core_common__models__tests__contact__contact_suggestions__test_contact_suggestions_TEST 8 - contacts are deduplicated.snap
---
source: core/core-common/src/tests/models/contact.rs
expression: display_suggestions(res)
---
8 suggestions:

contact/678: Jason Mendoza
J (#764AC4): jianyu.li@pm.me <jXXXXXXXX@XXXXX>,  local_id: 678, Proton address, last used: 2

contact/234: Michael Scott
M (#4989FF): m.scott@pm.me <mXXXXXX@XXXXX>,  local_id: 234, Proton address, last used: 2

contact/123: Barbara Lox
B (#9E66FC): barbara@pm.me <bXXXXXX@XXXXX>,  local_id: 123, Proton address, last used: 1

contact/999: Detective Peralta
J (#9C89FF): jake.peralta@99.com <jXXXXXXXXXXX@XXXXXX>,  local_id: 999, last used: 3

contact/112: Jake Peralta
H (#764AC4): harvey@jp.com <hXXXXX@XXXXXX>,  local_id: 112, last used: 1

device-contact-email/000-0: Aunt Molly
A (#7B3185): <mXXXX@XXXXXXXXXX>

device-contact-email/001-0: Aunt Molly
A (#7B3185): <bXXXXX@XXXXXXXX>

group/910: M. Schur Productions
M (#495EA9): Michael Scott <mXXXXXX@XXXXX>, local_id: 2
J (#51BE50): Jason Mendoza <jXXXXXXXX@XXXXX>, local_id: 3
J (#9C89FF): Jake Peralta <jXXXXXXXXXXX@XXXXXX, hXXXXX@XXXXXX>, local_id: 4
